[package]
name = "sashstore-redleaf"
version = "0.1.0"
authors = ["Gerd Zellweger <gzellweger@vmware.com>"]
edition = "2018"

[dependencies]
log = "0.4"

[dependencies.lru]
path = "./lru-rs"
default-features = false
features = ["nightly", "hashbrown"]

# Add debug symbols on the release build so that we can debug performance issues
[profile.release]
debug = true
incremental = false
lto = true
codegen-units = 1

[profile.bench]
debug = true
