[package]
name = "sashstore-redleaf"
version = "0.1.0"
authors = ["Gerd Zellweger <gzellweger@vmware.com>"]
edition = "2018"

[dependencies]
log = "0.4"

[dependencies.fnv]
git = "https://github.com/servo/rust-fnv"
default-features = false

[dependencies.arrayvec]
version = "0.5.1"
default-features = false
features = ["array-sizes-129-255"]

# Add debug symbols on the release build so that we can debug performance issues
[profile.release]
debug = true
incremental = false
lto = true
codegen-units = 1

[profile.bench]
debug = true
